# zwog

./: .pre-commit-config.yaml  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/: pytest.yaml
.github/workflows/: flake8.yaml  pytest.yaml  python-lint-plus.yaml  tests.yaml
docs/: README.md  constants.md  utils.md
src/zwog/: __init__.py  constants.py  utils.py
test/: test_utils.py
tests/: __init__.py  test_utils.py
zwog/: __init__.py  utils.py
